# CPP_SOFT_notes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.zed/: tasks.json
saura/cmd/app/: main.cpp
saura/include/saura/app/: app.cpp  app.hpp
saura/include/saura/config/: config.cpp  config.hpp
saura/include/saura/core/os/: os.cpp  os.hpp
saura/include/saura/core/utils/: utils.cpp  utils.hpp
saura/include/saura/ui/: ui.cpp  ui.hpp
src/: app.cpp  app.hpp  main.cpp  os.cpp  os.hpp  ui.hpp  utils.cpp  utils.hpp
src/ui/: ui.hpp  vault.cpp  vault.hpp  vault_manager.cpp  vault_manager.hpp
tests/: CMakeLists.txt  manager_vaults.cpp  vault_manager.cpp
